--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
  <div class="container">
   <div class="row">
    <div class="col-lg-12">
@@ -14,4 +14,4 @@
    </div>
   </div>
  </div>
-</footer>
+</footer> -->
