Some more updates

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,20 +9,23 @@
    <div class="col-12">
     <nav class="main-nav">
      <!-- ***** Logo Start ***** -->
-     <a href="index.html" class="logo">
-      <img src="assets/images/logo-v1.png" alt="" />
+     <a href="index.html" style="color: black" class="logo">
+      <!-- <img src="assets/images/logo-v1.png" alt="" /> -->
+      <h4><br />Neolithic System</h4>
      </a>
      <!-- ***** Logo End ***** -->
      <!-- ***** Menu Start ***** -->
      <ul class="nav">
       <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-      <li class="scroll-to-section"><a href="#about">About</a></li>
+      <!-- <li class="scroll-to-section"><a href="#about">About</a></li>
       <li class="scroll-to-section"><a href="#services">Services</a></li>
       <li class="scroll-to-section"><a href="#portfolio">Projects</a></li>
-      <li class="scroll-to-section"><a href="#blog">Blog</a></li>
-      <li class="scroll-to-section"><a href="#contact">Contact</a></li>
+      <li class="scroll-to-section"><a href="#blog">Blog</a></li> -->
+      <!-- <li class="scroll-to-section">
+       <a>Contact</a>
+      </li> -->
       <li class="scroll-to-section">
-       <div class="border-first-button"><a href="#contact">Free Quote</a></div>
+       <div class="border-first-button"><a target="_blank" href="mailto:venu@neolithicsystem.com">Contact</a></div>
       </li>
      </ul>
      <a class="menu-trigger">
