--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,13 +18,13 @@
    <title>{{ page.title }} | Neolithic Solutions</title>
 
    <!-- Bootstrap core CSS -->
-   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
    <!-- Additional CSS Files -->
-   <link rel="stylesheet" href="assets/css/fontawesome.css" />
-   <link rel="stylesheet" href="assets/css/templatemo-digimedia-v1.css" />
-   <link rel="stylesheet" href="assets/css/animated.css" />
-   <link rel="stylesheet" href="assets/css/owl.css" />
+   <link rel="stylesheet" href="/assets/css/fontawesome.css" />
+   <link rel="stylesheet" href="/assets/css/templatemo-digimedia-v1.css" />
+   <link rel="stylesheet" href="/assets/css/animated.css" />
+   <link rel="stylesheet" href="/assets/css/owl.css" />
   </head>
  </html>
 </html>
