--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,23 +8,23 @@
    />
    <meta name="description" content="" />
    <meta name="author" content="" />
-   <link rel="preconnect" href="https://fonts.googleapis.com" />
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link rel="preconnect" href="{{ site.baseurl }}https://fonts.googleapis.com" />
+   <link rel="preconnect" href="{{ site.baseurl }}https://fonts.gstatic.com" crossorigin />
    <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    href="{{ site.baseurl }}https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet"
    />
 
-   <title>{{ page.title }} | Neolithic Solutions</title>
+   <title>{{ page.title }} | Neolithic System</title>
 
    <!-- Bootstrap core CSS -->
-   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+   <link href="{{ site.baseurl }}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
    <!-- Additional CSS Files -->
-   <link rel="stylesheet" href="/assets/css/fontawesome.css" />
-   <link rel="stylesheet" href="/assets/css/templatemo-digimedia-v1.css" />
-   <link rel="stylesheet" href="/assets/css/animated.css" />
-   <link rel="stylesheet" href="/assets/css/owl.css" />
+   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/fontawesome.css" />
+   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/templatemo-digimedia-v1.css" />
+   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/animated.css" />
+   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/owl.css" />
   </head>
  </html>
 </html>
