--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -1472,6 +1472,8 @@ Services Style
 
 .services .naccs .menu div.active {
  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+ bac
+ mnbhbh
 }
 
 .services ul.nacc {
@@ -2285,8 +2287,6 @@ responsive
 
 .partnersCard {
  padding: 10px;
- margin: 10px;
- height: 100%;
 }
 
 .partnersCard :hover {
