Some more changes
Co-authored-by: Rushi1311 <Rushi1311@users.noreply.github.com>

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,15 +17,19 @@
      <!-- ***** Menu Start ***** -->
      <ul class="nav">
       <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-      <!-- <li class="scroll-to-section"><a href="#about">About</a></li>
-      <li class="scroll-to-section"><a href="#services">Services</a></li>
+      <li class="scroll-to-section"><a href="#about">About</a></li>
+      <li class="scroll-to-section"><a href="#services">Solution</a></li>
+      <li class="scroll-to-section"><a href="#career">Career</a></li>
+      <!--   <li class="scroll-to-section"><a href="#services">Services</a></li>
       <li class="scroll-to-section"><a href="#portfolio">Projects</a></li>
       <li class="scroll-to-section"><a href="#blog">Blog</a></li> -->
       <!-- <li class="scroll-to-section">
        <a>Contact</a>
       </li> -->
       <li class="scroll-to-section">
-       <div class="border-first-button"><a target="_blank" href="mailto:venu@neolithicsystem.com">Contact</a></div>
+       <div class="border-first-button">
+        <a target="_blank" href="mailto:venu@neolithicsystem.com">Contact</a>
+       </div>
       </li>
      </ul>
      <a class="menu-trigger">
