Logo Added; Content updated.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,8 +10,12 @@
     <nav class="main-nav">
      <!-- ***** Logo Start ***** -->
      <a href="index.html" style="color: black" class="logo">
-      <!-- <img src="assets/images/logo-v1.png" alt="" /> -->
-      <h4><br />Neolithic System</h4>
+      <img
+       src="/assets/images/logo/logopng.png"
+       alt=""
+       style="width: 130px !important"
+      />
+      <!-- <h4><br />Neolithic System</h4> -->
      </a>
      <!-- ***** Logo End ***** -->
      <!-- ***** Menu Start ***** -->
