--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -1474,7 +1474,6 @@ Services Style
  width: 100%;
  padding: 30px 0px;
  background-color: #fff;
-
 }
 
 @media screen and (max-width: 660px) {
@@ -1482,7 +1481,7 @@ Services Style
   margin-left: 10vw;
  }
 }
-  
+
 .services .naccs .menu div.active {
  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
@@ -2319,4 +2318,10 @@ responsive
 .partnersCard img {
  width: 100%;
  height: 100%;
+}
+
+/* Industries cards */
+.industries img {
+ margin: 3px;
+ width: 100%;
 }
