COE  page added

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,10 +20,10 @@
      <!-- ***** Logo End ***** -->
      <!-- ***** Menu Start ***** -->
      <ul class="nav">
-      <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-      <li class="scroll-to-section"><a href="#about">About</a></li>
-      <li class="scroll-to-section"><a href="#services">Solution</a></li>
-      <li class="scroll-to-section"><a href="#career">Career</a></li>
+      <li class="scroll-to-section"><a href="./index.html#top" class="active">Home</a></li>
+      <li class="scroll-to-section"><a href="./index.html#about">About</a></li>
+      <li class="scroll-to-section"><a href="./index.html#services">Solution</a></li>
+      <li class="scroll-to-section"><a href="./index.html#career">Career</a></li>
       <!--   <li class="scroll-to-section"><a href="#services">Services</a></li>
       <li class="scroll-to-section"><a href="#portfolio">Projects</a></li>
       <li class="scroll-to-section"><a href="#blog">Blog</a></li> -->
